OPH-701 | make the process clickable in blueprints-card (#122)
* feat: make the process clickable in blueprints-card

Refs: oph-701

* feat: show a slash when no blueprints are linked

Used the getter as then the template gets updated when all where removed

Refs: oph-701

--- a/app/components/process/blueprint-card.hbs
+++ b/app/components/process/blueprint-card.hbs
@@ -59,14 +59,21 @@
           <Item>
             <:label>Gekoppeld aan</:label>
             <:content>
-              <ul>
-                {{#each @process.linkedBlueprints as |blueprint|}}
-                  <li>{{blueprint.title}}</li>
-                {{/each}}
-              </ul>
+              {{#if (gt this.linkedBlueprints.length 0)}}
+                <ul>
+                  {{#each this.linkedBlueprints as |blueprint|}}
+                    <li>
+                      <AuLinkExternal @newTab={{true}} href={{blueprint.href}}>
+                        {{blueprint.title}}
+                      </AuLinkExternal>
+                    </li>
+                  {{/each}}
+                </ul>
+              {{else}}
+                <p>/</p>
+              {{/if}}
             </:content>
           </Item>
-
         </:left>
       </Card.Columns>
     </:card>
