OPH-702 | Show usage of blueprint on the overview page (#123)
* feat: show gekoppelde process van blauwdruk

In a normal process we can link to a blauwdruk and they are listed in
the icr-card. Also show the reverse relation in the blueprint processes

Refs: oph-702

* feat: move the usages of blueprints to the right column + show slash when empty

The slash is so it is in line with all the other elements in the view

Refs: oph-702

--- a/app/components/process/icr-card.hbs
+++ b/app/components/process/icr-card.hbs
@@ -220,6 +220,24 @@
               {{/if}}
             </:content>
           </Item>
+          <Item>
+            <:label>Gekoppeld aan</:label>
+            <:content>
+              {{#if (gt this.blueprintUsages.length 0)}}
+                <ul>
+                  {{#each this.blueprintUsages as |usage|}}
+                    <li>
+                      <AuLinkExternal @newTab={{true}} href={{usage.href}}>
+                        {{usage.title}}
+                      </AuLinkExternal>
+                    </li>
+                  {{/each}}
+                </ul>
+              {{else}}
+                <p>/</p>
+              {{/if}}
+            </:content>
+          </Item>
         </:right>
       </Card.Columns>
     </:card>
