feat: show donaload button on the inventory processes page
Just a WIP with an alert when clicking on inventory

Refs: oph-662

--- a/app/templates/inventory/index.hbs
+++ b/app/templates/inventory/index.hbs
@@ -20,6 +20,12 @@
             {{on "click" this.addNewInventoryProcess}}
           >Nieuw hoofdproces</AuButton>
         {{/if}}
+        <AuButton
+          @skin="primary"
+          @icon="download"
+          iconAlignment="left"
+          {{on "click" this.downloadProcesses}}
+        >Download</AuButton>
       </:action>
     </PageHeader>
 
