--- a/app/templates/inventory/index.hbs
+++ b/app/templates/inventory/index.hbs
@@ -20,12 +20,14 @@
             {{on "click" this.addNewInventoryProcess}}
           >Nieuw hoofdproces</AuButton>
         {{/if}}
-        <AuButton
-          @skin="primary"
+        <AuLinkExternal
+          role={{@role}}
+          href={{this.downloadProcessesHref}}
+          download="inventory-processen"
+          @skin="button"
           @icon="download"
-          iconAlignment="left"
-          {{on "click" this.downloadProcesses}}
-        >Download</AuButton>
+          @iconAlignment="left"
+        >Download</AuLinkExternal>
       </:action>
     </PageHeader>
 
