--- a/app/templates/inventory/index.hbs
+++ b/app/templates/inventory/index.hbs
@@ -11,7 +11,7 @@
             <AuLabel for="filter-category">Categorie</AuLabel>
             <Inventory::SelectByCategory
               @id="filter-category"
-              @selected={{this.selectedCategory}}
+              @selected={{this.category}}
               @onChange={{this.setCategory}}
               class="grow"
             />
