Allow searching in domain filter

--- a/app/components/inventory/select-by-domain.hbs
+++ b/app/components/inventory/select-by-domain.hbs
@@ -6,6 +6,8 @@
     @selected={{this.selectedDomain.value}}
     @onChange={{this.onChange}}
     @allowClear={{true}}
+    @searchEnabled={{true}}
+    @searchField="label"
     @triggerId={{@id}}
     as |domain|
   >
