--- a/app/components/inventory/select-by-domain.hbs
+++ b/app/components/inventory/select-by-domain.hbs
@@ -2,7 +2,7 @@
   <PowerSelect
     @loadingMessage="Aan het laden..."
     @noMatchesMessage="Geen resultaten"
-    @options={{this.domains}}
+    @options={{this.domains.value}}
     @selected={{this.selectedDomain.value}}
     @onChange={{this.onChange}}
     @allowClear={{true}}
