feat: use field property for sorting on the table
Refs: oph-662

--- a/app/templates/inventory/index.hbs
+++ b/app/templates/inventory/index.hbs
@@ -43,7 +43,7 @@
           <c.header>
             {{#each @model.tableContent.sortableHeaderLabels as |header|}}
               <AuDataTableThSortable
-                @field={{header.sortProperty}}
+                @field={{header.field}}
                 @currentSorting={{this.sort}}
                 @label={{header.label}}
               />
