Refactor inventory controller

--- a/app/components/inventory/edit-conceptual-process-modal.hbs
+++ b/app/components/inventory/edit-conceptual-process-modal.hbs
@@ -2,9 +2,9 @@
   <AuModal @modalOpen={{true}} @closeModal={{this.close}}>
     <:title>
       {{if
-        @isEditing
-        "Bewerk inventarisproces"
+        @record.isNew
         "Voeg nieuw inventarisproces toe"
+        "Bewerk inventarisproces"
       }}
     </:title>
 
