Rename record argument

--- a/app/components/inventory/edit-conceptual-process-modal.hbs
+++ b/app/components/inventory/edit-conceptual-process-modal.hbs
@@ -2,7 +2,7 @@
   <AuModal @modalOpen={{true}} @closeModal={{this.close}}>
     <:title>
       {{if
-        @record.isNew
+        @process.isNew
         "Voeg nieuw inventarisproces toe"
         "Bewerk inventarisproces"
       }}
