Allow clearing power selects

--- a/app/components/inventory/edit-conceptual-process-modal.hbs
+++ b/app/components/inventory/edit-conceptual-process-modal.hbs
@@ -25,6 +25,7 @@
         @searchEnabled={{true}}
         @searchField="label"
         @disabled={{this.isLoadingOptions}}
+        @allowClear={{true}}
         as |group|
       >
         {{group.label}}
@@ -43,6 +44,7 @@
         @searchEnabled={{true}}
         @searchField="label"
         @disabled={{this.isLoadingOptions}}
+        @allowClear={{true}}
         as |domain|
       >
         {{domain.label}}
@@ -61,6 +63,7 @@
         @searchEnabled={{true}}
         @searchField="label"
         @disabled={{this.isLoadingOptions}}
+        @allowClear={{true}}
         as |category|
       >
         {{category.label}}
